@@ -3,7 +3,6 @@ package com.maxmind.geoip2.json;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -12,7 +11,6 @@ public class File {
             URISyntaxException {
         URL resource = File.class
                 .getResource("/test-data/" + name + ".json");
-        return new String(Files.readAllBytes(Paths.get(resource.toURI())),
-                StandardCharsets.UTF_8);
+        return Files.readString(Paths.get(resource.toURI()));
     }
 }
